--- a/website/templates/edit-recipe.html
+++ b/website/templates/edit-recipe.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %} {% block title %}Create Recipe - NutriMetrics{% endblock %}
+{% extends "base.html" %} {% block title %}Edit {{recipe.name}} - NutriMetrics{% endblock %}
 
 {% block content %}
-<h1 align="center">Create a recipe</h1>
+<h1 align="center">Edit recipe</h1>
 <form method="POST">
     <div input-group mb-3>
         <label for="recipe-name" class="form-label">Name your recipe</label>
@@ -58,6 +58,28 @@
     <br/>
     <div align="center">
         <button type="submit" class="btn btn-primary">Save recipe</button>
+    </div>
+    <br/>
+    <div align="center">
+        <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#WarningModal">Delete recipe</button>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="WarningModal" tabindex="-1" aria-labelledby="WarningModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="WarningModalLabel">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+            Are you sure you want to delete this recipe? This cannot be undone.
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Go back</button>
+            <button name="delete-recipe" value="True" type="submit" class="btn btn-outline-danger">Delete</button>
+            </div>
+        </div>
+        </div>
     </div>
 </form>
 <script
