--- a/website/templates/logged-in/sidebar.html
+++ b/website/templates/logged-in/sidebar.html
@@ -23,6 +23,7 @@
                 </div>
                 <span class="features-item-text">Dashboard</span>
             </a>
+            <span class="tooltip">Dashboard</span>
         </li>
 
         <li class="features-item nav-item d-grid mt-1">
@@ -32,27 +33,71 @@
                 </div>
                 <span class="features-item-text">Trends</span>
             </a>
+            <span class="tooltip">Trends</span>
         </li>
 
-        <li class="features-item nav-item d-grid mt-1">
-            <button class="features-item-btn features-item-btn-svg btn btn-toggle rounded collapsed text-white" data-bs-toggle="collapse" data-bs-target="#foods-collapse" aria-expanded="true">
-                <div class="features-item-icon-svg">
-                    <svg
-                        class="text-white" xmlns="http://www.w3.org/2000/svg" 
-                        viewBox="0 0 448 512">
-                        <path fill="#FFFFFF" stroke="#FFFFFF" d="M224 112c-8.8 0-16-7.2-16-16l0-16c0-44.2 35.8-80 80-80l16 0c8.8 0 16 7.2 16 16l0 16c0 44.2-35.8 80-80 80l-16 0zM0 288c0-76.3 35.7-160 112-160c27.3 0 59.7 10.3 82.7 19.3c18.8 7.3 39.9 7.3 58.7 0c22.9-8.9 55.4-19.3 82.7-19.3c76.3 0 112 83.7 112 160c0 128-80 224-160 224c-16.5 0-38.1-6.6-51.5-11.3c-8.1-2.8-16.9-2.8-25 0c-13.4 4.7-35 11.3-51.5 11.3C80 512 0 416 0 288z"/>
-                    </svg>
-                </div>
-                <span class="features-item-text" style="vertical-align: middle;">Foods</span>
-            </button>
-            <div class="features-item-dropdown collapse" id="foods-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="#" class="d-grid rounded text-white">Search Food</a></li>
-                    <li><a href="/my-recipes" class="d-grid rounded text-white">My Recipes</a></li>
-                    <li><a href="/create-recipe" class="d-grid rounded text-white">New Recipe</a></li>
-                </ul>
+        <div class="features-item-dropdown">
+            <li class="features-item nav-item d-grid mt-1">
+                <button id="yoinkysploinky" class="features-item-btn features-item-btn-svg btn btn-toggle rounded collapsed text-white" data-bs-toggle="collapse" data-bs-target="#foods-collapse" aria-expanded="true">
+                    <div class="features-item-icon-svg">
+                        <svg
+                            class="text-white" xmlns="http://www.w3.org/2000/svg" 
+                            viewBox="0 0 448 512">
+                            <path fill="#FFFFFF" stroke="#FFFFFF" d="M224 112c-8.8 0-16-7.2-16-16l0-16c0-44.2 35.8-80 80-80l16 0c8.8 0 16 7.2 16 16l0 16c0 44.2-35.8 80-80 80l-16 0zM0 288c0-76.3 35.7-160 112-160c27.3 0 59.7 10.3 82.7 19.3c18.8 7.3 39.9 7.3 58.7 0c22.9-8.9 55.4-19.3 82.7-19.3c76.3 0 112 83.7 112 160c0 128-80 224-160 224c-16.5 0-38.1-6.6-51.5-11.3c-8.1-2.8-16.9-2.8-25 0c-13.4 4.7-35 11.3-51.5 11.3C80 512 0 416 0 288z"/>
+                        </svg>
+                    </div>
+                    <span class="features-item-text" style="vertical-align: middle;">Foods</span>
+                </button>
+                <span class="tooltip-dropdown">Inbox</span>
+                <!-- <div class="collapse" id="foods-collapse-collapsed">
+                    <ul class="features-list btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                        <li class="features-item">
+                            <a href="#" class="d-grid rounded text-white">
+                                <div class="features-item-icon">
+                                    <i class="bi bi-search"></i>
+                                </div>
+                            </a>
+                            <span class="tooltip">Search foods</span>
+                        </li>
+                    </ul>
+                </div> -->
+            </li>
+            <div class="features-item-dropdown collapse" id="foods-collapse-collapsed">
+                <li class="features-item">
+                    <a type="button" href="/trends" class="features-item-btn btn btn-toggle nav-link text-white">
+                        <div class="features-item-icon">
+                            <i class="bi bi-search"></i>
+                        </div>
+                    </a>
+                    <span class="tooltip">Search foods</span>
+                </li>
+                <li class="features-item">
+                    <a type="button" href="/trends" class="features-item-btn btn btn-toggle nav-link text-white">
+                        <div class="features-item-icon">
+                            <i class="bi bi-basket-fill"></i>
+                        </div>
+                    </a>
+                    <span class="tooltip">Grocery list</span>
+                </li>
+                <li class="features-item">
+                    <a type="button" href="/trends" class="features-item-btn btn btn-toggle nav-link text-white">
+                        <div class="features-item-icon">
+                            <i class="bi bi-stars"></i>
+                        </div>
+                    </a>
+                    <span class="tooltip">Ask AI</span>
+                </li>
             </div>
-        </li>
+        </div>
+        <div class="features-item-dropdown collapse" id="foods-collapse">
+            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+                <li><a href="#" class="d-grid rounded text-white">Search foods</a></li>
+                <li><a href="/my-recipes" class="d-grid rounded text-white">Grocery list</a></li>
+                <li><a href="/create-recipe" class="d-grid rounded text-white">Ask AI</a></li>
+            </ul>
+        </div>
+        
+        
 
         <li class="features-item nav-item d-grid mt-1">
             <a type="button" href="/my-recipes" class="features-item-btn btn btn-toggle nav-link text-white">
@@ -61,6 +106,7 @@
                 </div>
                 <span class="features-item-text">My Recipes</span>
             </a>
+            <span class="tooltip">My Recipes</span>
         </li>
         
         <li class="border-top my-3 "></li>
@@ -72,17 +118,19 @@
                 </div>
                 <span class="features-item-text">New Recipe</span>
             </a>
+            <span class="tooltip">New Recipe</span>
         </li>
 
     </ul>
     <ul class="features-list nav nav-pills flex-column">
         <li class="features-item nav-item d-grid mt-1">
-            <a type="button" href="/settings" class="features-item-btn btn btn-toggle nav-link text-white">
+            <a type="button" href="/settings" class="features-item-btn features-item-button btn btn-toggle nav-link text-white">
                 <div class="features-item-icon">
                     <i class="bi bi-gear-fill"></i>
                 </div>
                 <span class="features-item-text">Settings</span>
             </a>
+            <span class="tooltip">Settings</span>
         </li>
 
         <hr>
@@ -102,72 +150,3 @@
     </ul>
 </div>
 {%- endmacro %}
-
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-        <meta name="generator" content="Hugo 0.84.0">
-        <title>Sidebars · Bootstrap v5.0</title>
-    
-        <link
-            rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-            crossorigin="anonymous"
-        />
-        <link 
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-            rel="stylesheet" 
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
-            crossorigin="anonymous"
-            />
-        
-        <link 
-            rel="stylesheet" 
-            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-            />
-        
-        <link rel="stylesheet" href="{{ url_for('static', filename='sidebar.css')}}"/>
-    
-        <!-- moved to sidebar.css -->
-        <!-- <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
-        }
-    
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-            font-size: 3.5rem;
-            }
-        }
-        </style> -->
-    
-        <!-- Custom styles for this template -->
-        <!-- <link href="sidebar.css" rel="stylesheet"> -->
-
-    </head>
-    <body>
-
-        {{ sidebar("David") }}
-
-        <main>
-            <h1> Test</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque nihil molestias magnam perferendis aspernatur, ducimus veritatis hic rerum excepturi corrupti harum temporibus omnis non in id assumenda nesciunt rem cumque!</p>
-        </main>
-
-        <script
-            type="text/javascript"
-            src="{{ url_for('static', filename='index.js')}}"
-        ></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-        <script src="{{ url_for('static', filename='sidebar.js')}}"></script>
-    </body>    
-</html>
