--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -5,12 +5,18 @@
         <meta name="viewport" content="width=device-width, intial-scale=1"/>
 
         <!-- Bootstrap stylesheets -->
-        <link 
+        <!-- <link 
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
             rel="stylesheet" 
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
             crossorigin="anonymous"
+        /> -->
+
+        <link
+            rel="stylesheet"
+            href="{{url_for('static', filename='styles/bootstrap.min.css')}}"
         />
+
         <link 
             rel="stylesheet" 
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -19,13 +25,6 @@
         <!-- Sidebar stylesheets -->
         {% if user.is_authenticated %}
         <link rel="stylesheet" href="{{ url_for('static', filename='sidebar.css')}}"/>
-        <!-- <link
-            rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-            crossorigin="anonymous"
-        /> -->
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-        <!-- <link href="https://kit.fontawesome.com/a6dc5632bb.js" rel="stylesheet" crossorigin="anonymous"/> -->
         {% from 'logged-in/sidebar.html' import sidebar %}
         {% else %}
         {% endif %}
@@ -36,7 +35,7 @@
         {% endblock%}
     </head>
     <body>
-        <div>
+        <div style="z-index: 200;">
             {% if user.is_authenticated %}
             {{ sidebar(user_name) }}
             {% else %}
@@ -92,9 +91,16 @@
 
         </div>
 
+        <!-- JQuery -->
+        <!-- <script src="{{url_for('static', filename='js/jquery-3.7.1.js')}}"></script> -->
+         <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        
+        <!-- Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+
+        <!-- Bootstrap -->
+        <!-- <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script> -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
         <!-- Global js script(s) -->
         <script
