--- a/website/templates/logged-in/dashboard.html
+++ b/website/templates/logged-in/dashboard.html
@@ -2,9 +2,9 @@
 
 {% from 'nutrient-targets.html' import nutrient_target_circular_progress %}
 {% from 'progress-bar.html' import progress_bar, split_circle_progress_bar %}
+{% from 'logged-in/add-diary.html' import add_food_menu %}
 
-{% block inline_style %}
-<script src="{{ url_for('static', filename='view-recipe.js')}}"></script>
+{% block inline_style %} 
 {% endblock %}
 
 
@@ -13,7 +13,9 @@
 
 <div class="row my-4">
     <div class="col d-grid">
-        <button type="button" class="btn btn-primary">Add to meal diary</button>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Add to meal diary
+          </button> 
     </div>
     <div class="col d-grid">
         <button type="button" class="btn btn-primary p-2">View meal diary</button>
@@ -21,10 +23,27 @@
     <div class="col d-grid">
         <button type="button" class="btn btn-primary">View trends</button>
     </div>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-xl">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              {{add_food_menu()}}
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>  
 </div>
 
 <div class="row">
-    
     <div class="col">
         <div class="px-4">
             <div class="row">
@@ -264,10 +283,21 @@
 {% endblock %}
 
 {% block scripts %}
+
+<!-- Initialise popovers -->
+<script type="text/javascript">
+    const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+    const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
+</script>  
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="{{ url_for('static', filename='home.js')}}"></script>
+<script src="{{ url_for('static', filename='dashboard-charts.js')}}"></script>
 
 <script src='https://cdn.jsdelivr.net/gh/tomik23/circular-progress-bar@latest/docs/circularProgressBar.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js'></script>
 <script src="{{ url_for('static', filename='circle-progress-bar.js')}}"></script>
+
+<script src="{{ url_for('static', filename='add-diary.js')}}"></script>
+
+<!-- <script src="{{ url_for('static', filename='view-recipe.js')}}"></script> --> 
 {% endblock %}
